<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sbmpo_ros2</name>
  <version>1.0.0</version>
  <description>SBMPO ROS2 Package for Robot Trajectory Planning</description>
  <maintainer email="jboylan@fsu.edu">Jonathan T. Boylan</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>sbmpo</depend>
  <depend>sbmpo_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
